<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <View
        android:layout_width="@dimen/drag_handle_width"
        android:layout_height="@dimen/drag_handle_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing_md"
        android:background="@drawable/indicator_m3_drag" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_trusted_contact_title"
        android:textColor="@color/on_surface"
        android:textSize="@dimen/text_headline_small"
        android:fontFamily="sans-serif-bold"
        android:layout_marginBottom="@dimen/spacing_lg"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContactName"
        style="@style/Widget.InDrive.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContactPhone"
        style="@style/Widget.InDrive.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/phone_number_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContactPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddConfirm"
        style="@style/Widget.InDrive.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/add_to_network_btn" />

</LinearLayout>
